--- a/app/src/main/res/values-de/strings.xml
+++ b/app/src/main/res/values-de/strings.xml
@@ -11,6 +11,7 @@
     <string name="button_newtrack">Neuer Track</string>
     <string name="button_upload">Upload</string>
     <string name="is_running" comment="substituted app_name">%s läuft</string>
+    <string name="is_uploading" comment="substituted app_name">%s lädt Positionen hoch</string>
     <string name="title_newtrack">Neuer Track</string>
     <string name="label_track">Aktueller Track</string>
     <string name="label_newtrack_name">Track-Name</string>
